<resources>
    <string name="app_name">Hungry Wolves</string>
    <string name="splash_app_name">Hungry\nWolves</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="delicious_food_for_you">Delicious\nfood for you</string>
    <string name="search">Search</string>
    <string name="results">Found %s results</string>
    <string name="what_would_you_like_to_eat_today">What would you like to eat today?</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="random_text">"Preheat oven to 350° F. Spray a 9x13-inch baking pan with non-stick spray.\r\nCombine soy sauce, ½ cup water, brown sugar, ginger and garlic in a small saucepan and cover. Bring to a boil over medium heat. Remove lid and cook for one minute once boiling.\r\nMeanwhile, stir together the corn starch and 2 tablespoons of water in a separate dish until smooth. Once sauce is boiling, add mixture to the saucepan and stir to combine. Cook until the sauce starts to thicken then remove from heat.\r\nPlace the chicken breasts in the prepared pan. Pour one cup of the sauce over top of chicken. Place chicken in oven and bake 35 minutes or until cooked through. Remove from oven and shred chicken in the dish using two forks.\r\n*Meanwhile, steam or cook the vegetables according to package directions.\r\nAdd the cooked vegetables and rice to the casserole dish with the chicken. Add most of the remaining sauce, reserving a bit to drizzle over the top when serving. Gently toss everything together in the casserole dish until combined. Return to oven and cook 15 minutes. Remove from oven and let stand 5 minutes before serving. Drizzle each serving with remaining sauce. Enjoy!"</string>
    <string name="my_profile">My Profile</string>
    <string name="favourites">Favourites</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="my_favourites">My favourites</string>
    <string name="swipe_on_an_item_to_delete">swipe on an item to delete</string>
    <string name="long_press_on_item_to_delete">long press on item to delete</string>
    <string name="delete">delete</string>
    <string name="item_not_found">Item not found</string>
    <string name="try_searching_the_item_with_na_different_keyword">Try searching the item with\na different keyword</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="message_no_internet">Your internet connection is currently\nnot available please check or try again.</string>
    <string name="try_again">Try again</string>
</resources>