<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ProfileScreenFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.hungrywolves.model.ProfileScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alabaster">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/radius_26dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/my_profile_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_46dp"
            android:layout_marginTop="@dimen/margin_26dp"
            android:fontFamily="@font/sf_pro_rounded_bold"
            android:text="@string/my_profile"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_button" />

        <androidx.cardview.widget.CardView
            android:id="@+id/details_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_46dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="@dimen/radius_26dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_profile_text_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/user_image_profile"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/margin_26dp"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.35"
                    app:shapeAppearanceOverlay="@style/CustomShapeImageProfile"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:id="@+id/layout_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/radius_26dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/margin_26dp"
                    app:layout_constraintStart_toEndOf="@id/user_image_profile"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/sf_pro_rounded_bold"
                        android:maxWidth="@dimen/size_140dp"
                        android:singleLine="true"
                        android:text="@{viewModel.user.name}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size22sp"
                        tools:text="Razvan Cozma" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxWidth="@dimen/size_140dp"
                        android:maxLines="1"
                        android:text="@{viewModel.user.email}"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size_18sp"
                        tools:text="razvan@wolpack-digital.com" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxWidth="@dimen/size_140dp"
                        android:paddingTop="@dimen/margin_10dp"
                        android:text="@{viewModel.user.phoneNumber}"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size_18sp"
                        tools:text="+40 123 456 789" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/favourite_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_46dp"
            android:layout_marginTop="@dimen/radius_26dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="@dimen/radius_26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_card_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:fontFamily="@font/sf_pro_rounded_bold"
                    android:text="@string/favourites"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/favourite_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:backgroundTint="@android:color/transparent"
                    android:clickable="false"
                    android:scaleX="-1"
                    android:src="@drawable/ic_back_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/terms_and_condition_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_46dp"
            android:layout_marginTop="@dimen/radius_26dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="@dimen/radius_26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favourite_page">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:fontFamily="@font/sf_pro_rounded_bold"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/terms_and_condition_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:clickable="false"
                    android:scaleX="-1"
                    android:src="@drawable/ic_back_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>