<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.details.DetailScreenFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.hungrywolves.ui.details.DetailScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alabaster"
        android:clipChildren="false"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/radius_26dp"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_back_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/favourite_button"
                android:layout_width="@dimen/size_30dp"
                android:layout_height="@dimen/margin_30dp"
                android:background="@drawable/ic_favourite"
                android:checked="false"
                android:scaleType="centerInside"
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttons_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/meal_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:elevation="@dimen/elevation_10dp"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{viewModel.mealDetail.mealUrl}"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5"
                    app:shapeAppearanceOverlay="@style/CustomShapeImage"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/meal_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:fontFamily="@font/sf_pro_rounded_bold"
                    android:paddingHorizontal="@dimen/margin_26dp"
                    android:text="@{viewModel.mealDetail.name}"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_34sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/meal_image"
                    tools:text="Something tasty" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/horizontal_recycle_view_tags"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/margin_26dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/meal_name"
                    tools:listitem="@layout/horizontal_tag_item" />

                <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_26dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:fontFamily="@font/sf_pro_rounded_bold"
                    android:text="@string/ingredients"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/horizontal_recycle_view_tags" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/first_check_box_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ingredients">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/first_check_box"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30dp"
                        android:buttonTint="@color/gray"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:padding="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:useMaterialThemeColors="false" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/sf_pro_rounded_regular"
                        android:ingredient="@{viewModel.mealDetail.firstIngredient}"
                        android:measure="@{viewModel.mealDetail.firstMeasure}"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size_18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/first_check_box"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="3/4 cup soy sauce" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/second_check_box_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/first_check_box_layout">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/second_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30dp"
                        android:buttonTint="@color/gray"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:padding="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/sf_pro_rounded_regular"
                        android:ingredient="@{viewModel.mealDetail.secondIngredient}"
                        android:measure="@{viewModel.mealDetail.secondMeasure}"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size_18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/second_check_box"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="3/4 cup soy sauce" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/third_check_box_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/second_check_box_layout">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/third_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30dp"
                        android:buttonTint="@color/gray"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:padding="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/sf_pro_rounded_regular"
                        android:ingredient="@{viewModel.mealDetail.thirdIngredient}"
                        android:measure="@{viewModel.mealDetail.thirdMeasure}"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size_18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/third_check_box"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="3/4 cup soy sauce" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_26dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:fontFamily="@font/sf_pro_rounded_bold"
                    android:text="@string/instructions"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/third_check_box_layout" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_rounded_regular"
                    android:paddingHorizontal="@dimen/margin_26dp"
                    android:paddingTop="@dimen/margin_16dp"
                    android:paddingBottom="@dimen/margin_26dp"
                    android:text="@{viewModel.mealDetail.instruction}"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/instruction"
                    tools:text="@string/random_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>